@@ -1,8 +1,8 @@
 package org.example;
 
+import org.springframework.stereotype.Repository;
 import software.amazon.awssdk.services.dynamodb.model.*;
 
-import org.springframework.data.repository.CrudRepository;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 
 import java.util.Collections;
@@ -11,9 +11,10 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-
+@Repository
 public class ToDoRepository {
     private final DynamoDbClient dynamoDBClient;
+    private final String tableName = "ToDo";
 
     public ToDoRepository(DynamoDbClient dynamoDBClient){
         this.dynamoDBClient = dynamoDBClient;
@@ -21,7 +22,7 @@ public class ToDoRepository {
 
     public ToDo save(ToDo toDo){
         PutItemRequest request = PutItemRequest.builder()
-                .tableName("your_table_name")
+                .tableName(tableName)
                 .item(toDo.toAttributeMap())
                 .build();
         dynamoDBClient.putItem(request);
@@ -30,7 +31,7 @@ public class ToDoRepository {
 
     public Optional<ToDo> findById(String id){
         GetItemRequest request = GetItemRequest.builder()
-                .tableName("your_table_name")
+                .tableName(tableName)
                 .key(Collections.singletonMap("id", AttributeValue.builder().s(id).build()))
                 .build();
         GetItemResponse response = dynamoDBClient.getItem(request);
@@ -44,37 +45,41 @@ public class ToDoRepository {
 
     public void deleteById(String id){
         DeleteItemRequest request = DeleteItemRequest.builder()
-                .tableName("your_table_name")
+                .tableName(tableName)
                 .key(Collections.singletonMap("id", AttributeValue.builder().s(id).build()))
                 .build();
 
         dynamoDBClient.deleteItem(request);
     }
 
-    public void update (ToDo toDo){
+    public ToDo update (ToDo toDo){
         UpdateItemRequest request = UpdateItemRequest.builder()
-                .tableName("your_table_name")
+                .tableName(tableName)
                 .key(Collections.singletonMap("id", AttributeValue.builder().s(toDo.getId()).build()))
-                .updateExpression("SET #title =:title")
-                .expressionAttributeNames(Collections.singletonMap("#name", "name"))
-                .expressionAttributeValues(Collections.singletonMap(":name", AttributeValue.builder().s(toDo.getTitle()).build()))
+                .updateExpression("SET #task =:task, #description = :description, #completed = :completed")
+                .expressionAttributeNames(Map.of("#task", "task", "#description", "description", "#completed", "completed"))
+                .expressionAttributeValues(Map.of(
+                        ":task", AttributeValue.builder().s(toDo.getTask()).build(),
+                        ":description", AttributeValue.builder().s(toDo.getDescription()).build(),
+                        ":completed", AttributeValue.builder().bool(toDo.isCompleted()).build()))
                 .build();
 
         dynamoDBClient.updateItem(request);
+        return toDo;
     }
 
     public ToDo fromAttributeMap(Map<String, AttributeValue> item){
         String id = item.get("id").s();
-        String title = item.get("title").s();
+        String task = item.get("task").s();
         String description = item.get("description").s();
-        boolean completed = Boolean.parseBoolean(item.get("completed").bool().toString());
+        boolean completed = item.get("completed").bool();
 
-        return new ToDo(id, title,description, completed);
+        return new ToDo(id, task,description, completed);
     }
 
     public List<ToDo> findAll() {
         ScanRequest request = ScanRequest.builder()
-                .tableName("your_table_name")
+                .tableName(tableName)
                 .build();
 
         ScanResponse response = dynamoDBClient.scan(request);
